--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.8.*
-  - snowflake-snowpark-python=
-  - streamlit=
+# requirement.txt
+snowflake-connector-python
+snowflake-snowpark-python
+streamlit==1.31.1
+
+
+
+
+
+
+
